[package]
name = "healthy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
clap = { version = "4.5.2", features = ["derive", "env"] }
derive_more = "0.99.17"
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.21"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "net", "signal", "macros"] }
